<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateTrip"
        android:text="@string/calculate_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/percentageInput"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:autofillHints="android:hint"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/percentage_textBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/textPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/percent_label"
        android:textAppearance="@style/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentageInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <Spinner
        android:id="@+id/passengerSpinner"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:entries="@array/passengers"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/labelPercentageDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/percentage_difference_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/percentageInput"
        app:layout_constraintEnd_toEndOf="@+id/textPercent"
        app:layout_constraintStart_toStartOf="@+id/percentageInput" />

    <TextView
        android:id="@+id/labelPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/passengers_label"
        app:layout_constraintBottom_toTopOf="@+id/passengerSpinner"
        app:layout_constraintEnd_toEndOf="@+id/passengerSpinner"
        app:layout_constraintStart_toStartOf="@+id/passengerSpinner" />

    <TextView
        android:id="@+id/labelInputError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/error_message"
        android:textAppearance="@style/error_label"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentageInput"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/overallChargeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/answer_text"
        android:textAlignment="center"
        android:textAppearance="@style/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalc"
        app:layout_constraintVertical_bias="0.119"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/pricePerPassengerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/passenger_charge_label"
        app:layout_constraintBottom_toTopOf="@+id/chargePerPassengerLabel"
        app:layout_constraintEnd_toEndOf="@+id/chargePerPassengerLabel"
        app:layout_constraintStart_toStartOf="@+id/chargePerPassengerLabel"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/chargePerPassengerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:text="@string/answer_text"
        android:textAlignment="center"
        android:textAppearance="@style/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonCalc"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalc"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/overallPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/overall_price_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/overallChargeLabel"
        app:layout_constraintEnd_toEndOf="@+id/overallChargeLabel"
        app:layout_constraintStart_toStartOf="@+id/overallChargeLabel"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>